log/build_2021-10-23_08-10-06/publisher3431/stderr.log
  File "/home/rsa2021/py_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/subscriber_ass2.py", line 85
    thetha = (math.pi/2)-i*0.01749303564429283
    ^
SyntaxError: invalid syntax

